# shard

./: .gitignore  FLEET_STATE.md  README.md  STATE.md  pyproject.toml
docs/: ARCHITECTURE.md  DEPLOY_READINESS.md  INTEGRATION.md  MODEL_RUNTIME.md  NETWORK.md  PROOF.md  ROADMAP.md
docs/receipts/: async-send-ttft-20260623.json  batched-verify-20260623.json  gpt-oss-120b-libp2p-20260619.json  (+2 more)
phase0/: DEPLOY_M25.md  add_model.py  add_model_test.py  batchverify.py  bench.py  confidence.py  fastverify.py  heal.py  hf_runtime.py  hf_runtime_test.py  launch_ngram.py  launch_oss.py  launch_swarm.py  m25_pipe.py  m25_scatter_pipe.py  m25_stage.py  mtp_draft.py  node_kv.py  plan_ring.py  proof_receipt.py  publish_registry.py  scheduler_svc.py  scheduler_svc_test.py  specpipe.py  specsample.py
registry/: models.json  models.src.json
research/: batchverify_test.py  bv_debug.py  context_sweep.py  draft_accept_bench.py  draft_server.py  glm_draft_bench.py  glm_draft_rollback.py  glm_fastverify_probe.py  glm_nvfp4_moe.py  glm_swarm_nvfp4_draft.py  glm_swarm_nvfp4_kv.py  glm_swarm_nvfp4_pipe.py  glm_wan_probe.py  m25_attnbench.py  m25_batch_serve_driver.py  m25_batchdiag.py  m25_batchfwd_onbox.py  m25_confsched_test.py  m25_sdpa_test.py  m25_statickv_test.py  mla_latent.py  moe_batch_test.py  ring_long.py  ring_mtp.py  specsample_proof.py  treeverify_probe.py
shard/: __init__.py  node.py  receipt.py  registry.py  registry_test.py  scheduler.py  specdec.py  transport.py
sidecar/: main.go
tests/: registry_cross_repo_test.py  test_context_sweep_utils.py
(+3 files in other folders)
