[project]
name = "shard"
version = "0.0.0"
description = "c0mpute's decentralized inference engine: one model, split across a swarm of consumer gpus"
requires-python = ">=3.11"
dependencies = [
    # per-node serving engine (we wrap it, don't rebuild it)
    # "sglang",
    # transport (phase 0-1): quic in python, lift hot path to rust later
    # "aioquic",
    # tensors / activation codec
    # "torch",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shard*"]
